--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "tommobosha.github.io/React-TS-Project/",
+  "homepage": "https://TommoBosha.github.io/React-TS-Project/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
